# roqson-core

./: .gitignore  .home_body4  .home_headers4  .root_headers4  .root_headers8  .step1_headers  .step1_headers2  .step1_headers3  .step2_body3  .step2_headers  .step2_headers2  .step2_headers3  AGENTS.md  CLAUDE.md  FRESH_INSTALL_STATUS.md  GEMINI_MIGRATION_SUMMARY.md  LOCALHOST_PLAYBOOK.md  MANIFEST.in  MIGRATION_QUIRKS_AUDIT.md  MIGRATION_QUIRKS_IMPLEMENTATION_NOTES.md  MIGRATION_STATUS_LOCAL.md  PRD_CSS_CLEANUP.md  PRODUCT_MIGRATION_SUMMARY.md  README.md  REPORT.md  TEAM_HANDOFF_MANUAL.md  api.py  check_existing_cfs.py  check_scripts.py  check_standard_fields.py  cost_tier.py  customer_information.py  edit_mode.js  get_scripts.py  get_scripts2.py  get_scripts3.py  notes_ack.js  pcr_flag.js  price_change_request.py  promos.js  (+15 more)
fixtures/: print_format.json  workflow.json
pre-staging drop backups/: 20260319_184204-roqson-staging_s_frappe_cloud-files.tar
roqson_core/: api.py  cost_tier.py  credit_application.py  customer_information.py  hooks.py  inventory_entry.py  inventory_ledger.py  local_auth.py  modules.txt  order_form.py  patches.txt  permissions.py  price_change_request.py  receipt.py  sales.py  tasks.py  trips.py
roqson_core/dev/: local_setup.py
roqson_core/fixtures/: custom_field.json  doctype.json  print_format.json  role.json  role_profile.json  workflow.json  workspace.json
roqson_core/public/: build.json
roqson_core/public/css/: roqson_core.css  roqson_core_refresh.css
roqson_core/public/js/: customer_information_form.bundle.js  customer_information_list.bundle.js  customer_survey_form.bundle.js  customer_survey_form_list.js  order_form.bundle.js  product_form.bundle.js  product_list.bundle.js  sales_form.bundle.js  sales_list.bundle.js  sidebar_default.js  trips_form.bundle.js  trips_list.bundle.js
roqson_core/public/js/order_form/: edit_mode.js  notes_ack.js  pcr_flag.js  promos.js  stock_ux.js  table_calc.js  totals_footer.js
scripts/: export-fixtures.sh  extract_backup_scripts.py  install-roqson-command.sh  roqson  roqson-refresh  workshop-refresh.sh
