[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roqson_core"
version = "0.0.1"
description = "ROQSON Industrial Sales core customizations"
authors = [
    {name = "ROQSON", email = "support@roqson.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
]
keywords = ["frappe", "roqson", "erp", "industrial-sales"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/ExaltedMags/roqson-core"
Repository = "https://github.com/ExaltedMags/roqson-core"
Documentation = "https://github.com/ExaltedMags/roqson-core"
"Bug Tracker" = "https://github.com/ExaltedMags/roqson-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["roqson_core*"]
